--- a/public/register.html
+++ b/public/register.html
@@ -11,8 +11,9 @@
 <body>
     <div class="main">
         <div class="container" style="height: 75%;">
-            <h2>Login Here!</h2>
+            <h2>Register Here!</h2>
             <input placeholder="Name" type="text" id="name" class="inputfield">
+            <input placeholder="Username" type="text" id="user" class="inputfield">
             <input placeholder="Mobile" type="number" id="mobile" class="inputfield">
             <input placeholder="Email" type="email" id="email" class="inputfield">
             <input placeholder="Password" type="password" id="pwd" class="inputfield">
