--- a/public/register.html
+++ b/public/register.html
@@ -21,6 +21,6 @@
             <a href="login.html" style="color:#faf5f3">Already a Member? login Now!</a>
         </div>
     </div>
-    <script src="register.js"></script>
+    <script type="module" src="register.js"></script>
 </body>
 </html>
